--- a/Simone/site.html
+++ b/Simone/site.html
@@ -41,10 +41,7 @@
             <img src="img/x01.png" alt="Simone" />
           </a>
         </div>
-        <div
-          class="col-lg-8 col-md-8 collapse navbar-collapse"
-          id="navbarNav"
-        >
+        <div class="col-lg-8 col-md-8 collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
               <a class="nav-link active" href="#">Home</a>
@@ -107,6 +104,21 @@
               Hire Me
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="about">
+      <div class="title text-center">
+        <div class="back position-relative">
+          <p class="position-absolute">ABOUT ME</p>
+        </div>
+        <div class="front">
+          <p>Know Me More</p>
+        </div>
+      </div>
+      <div class="content container-fluid">
+        <div class="row">
+          
         </div>
       </div>
     </div>
