--- a/Simone/site.html
+++ b/Simone/site.html
@@ -108,7 +108,7 @@
       </div>
     </div>
     <div class="about">
-      <div class="title text-center">
+      <div class="text-center">
         <div class="back position-relative">
           <p class="position-absolute">ABOUT ME</p>
         </div>
@@ -116,9 +116,83 @@
           <p>Know Me More</p>
         </div>
       </div>
-      <div class="content container-fluid">
+      <div class="container-fluid">
         <div class="row">
-          
+          <div class="col-8">
+            <div class="title">
+              <p>I'm <span>Simone Olivia,</span> a Web Developer</p>
+            </div>
+            <div class="content d-flex flex-column flex-wrap">
+              <div class="1st">
+                <p>
+                  I help you build brand for your business at an affordable
+                  price. Thousands of clients have procured exceptional results
+                  while working with our dedicated team. when an unknown printer
+                  took a galley of type and scrambled it to make a type specimen
+                  book.
+                </p>
+              </div>
+              <br />
+              <div class="2nd">
+                <p>
+                  Delivering work within time and budget which meets client’s
+                  requirements is our moto. Lorem Ipsum has been the industry's
+                  standard dummy text ever when an unknown printer took a
+                  galley.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="cv m-3">
+              <p><span>Name: </span> Simone Olivia</p>
+              <hr />
+              <p style="color: rgb(32, 201, 151)">
+                <span>Email: </span>chat@simone.com
+              </p>
+              <hr />
+              <p><span>Age: </span> 28</p>
+              <hr />
+              <p><span>From: </span> Los Angeles, California</p>
+              <button type="button" class="btn btn-outline-success">
+                Download CV
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-around m-3">
+          <div class="num col-2 text-center">
+            <p class="count">10+</p>
+            <p class="a">Years Experience</p>
+          </div>
+          <div class="num col-2 text-center">
+            <p class="count">250+</p>
+            <p class="a">Happy Clients</p>
+          </div>
+          <div class="num col-2 text-center">
+            <p class="count">650+</p>
+            <p class="a">Projects Done</p>
+          </div>
+          <div class="num col-2 text-center">
+            <p class="count">38</p>
+            <p class="a">Get Awards</p>
+          </div>
+        </div>
+      </div>
+      <div class="about">
+        <div class="text-center">
+          <div class="back position-relative">
+            <p class="position-absolute">Service</p>
+          </div>
+          <div class="front">
+            <p>What I Do?</p>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+          </div>
         </div>
       </div>
     </div>
