--- a/Simone/site.html
+++ b/Simone/site.html
@@ -109,8 +109,8 @@
     </div>
     <div class="about">
       <div class="text-center">
-        <div class="back position-relative">
-          <p class="position-absolute">ABOUT ME</p>
+        <div class="back">
+          <p>ABOUT ME</p>
         </div>
         <div class="front">
           <p>Know Me More</p>
@@ -118,7 +118,7 @@
       </div>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-8">
+          <div class="col-lg-8 col-md-12 col-sm-12">
             <div class="title">
               <p>I'm <span>Simone Olivia,</span> a Web Developer</p>
             </div>
@@ -143,7 +143,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="cv m-3">
               <p><span>Name: </span> Simone Olivia</p>
               <hr />
@@ -161,19 +161,19 @@
           </div>
         </div>
         <div class="row d-flex justify-content-around m-3">
-          <div class="num col-2 text-center">
+          <div class="num col-md-3 col-sm-6 text-center">
             <p class="count">10+</p>
             <p class="a">Years Experience</p>
           </div>
-          <div class="num col-2 text-center">
+          <div class="num col-md-3 col-sm-6 text-center">
             <p class="count">250+</p>
             <p class="a">Happy Clients</p>
           </div>
-          <div class="num col-2 text-center">
+          <div class="num col-md-3 col-sm-6 text-center">
             <p class="count">650+</p>
             <p class="a">Projects Done</p>
           </div>
-          <div class="num col-2 text-center">
+          <div class="num col-md-3 col-sm-6 text-center">
             <p class="count">38</p>
             <p class="a">Get Awards</p>
           </div>
@@ -181,8 +181,8 @@
       </div>
       <div class="about">
         <div class="text-center">
-          <div class="back position-relative">
-            <p class="position-absolute">Service</p>
+          <div class="back">
+            <p>Service</p>
           </div>
           <div class="front">
             <p>What I Do?</p>
