--- a/Simone/site.html
+++ b/Simone/site.html
@@ -179,20 +179,275 @@
           </div>
         </div>
       </div>
-      <div class="about">
-        <div class="text-center">
-          <div class="back">
-            <p>Service</p>
+    </div>
+    <div class="service">
+      <div class="text-center">
+        <div class="back">
+          <p>SERVICES</p>
+        </div>
+        <div class="front">
+          <p>What I Do?</p>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row ms-5 me-5 gy-5 gx-1">
+          <div class="col-md-6 col-sm-12 d-flex">
+            <div class="icon-container">
+              <i class="fa-solid fa-palette"></i>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="a">Graphic Design</div>
+              <div class="b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
           </div>
-          <div class="front">
-            <p>What I Do?</p>
+          <div class="col-md-6 col-sm-12 d-flex">
+            <div class="icon-container">
+              <i class="fa-solid fa-desktop"></i>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="a">Web Design</div>
+              <div class="b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 d-flex">
+            <div class="icon-container">
+              <i class="fas fa-pencil-ruler"></i>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="a">UI/UX Design</div>
+              <div class="b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 d-flex">
+            <div class="icon-container">
+              <i class="fa-solid fa-paintbrush"></i>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="a">App Design & Develop</div>
+              <div class="b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 d-flex">
+            <div class="icon-container">
+              <i class="fa-solid fa-chart-area"></i>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="a">Business Analysis</div>
+              <div class="b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 d-flex">
+            <div class="icon-container">
+              <i class="fas fa-bullhorn"></i>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="a">SEO Marketing</div>
+              <div class="b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
           </div>
         </div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+      </div>
+    </div>
+    <div class="about summary">
+      <div class="text-center">
+        <div class="back">
+          <p>SUMMARY</p>
+        </div>
+        <div class="front">
+          <p>Resume</p>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row d-flex justify-content-around">
+          <div class="col-md-6 col-sm-12 ed">
+            <div class="col-sm-12 d-flex categ">My Education</div>
+            <br />
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="col-12 date">2000-2004</div>
+              <div class="col-12 a">Computer Science</div>
+              <div class="col-12 uni text-danger">International University</div>
+              <div class="col-12 b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+            <br />
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="col-12 date">2005-2008</div>
+              <div class="col-12 a">Bachelor Degree</div>
+              <div class="col-12 uni text-danger">University of California</div>
+              <div class="col-12 b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+            <br />
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="col-12 date">2009-2012</div>
+              <div class="col-12 a">Master Degree</div>
+              <div class="col-12 uni text-danger">Harvard University</div>
+              <div class="col-12 b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
           </div>
+          <br />
+          <div class="col-md-6 col-sm-12 exp">
+            <div class="col-md-6 col-sm-12 d-flex categ">My Experience</div>
+            <br />
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="col-12 date">2012-2013</div>
+              <div class="col-12 a">Jr. UI UX Designer</div>
+              <div class="col-12 uni text-danger">Themeforest</div>
+              <div class="col-12 b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+            <br />
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="col-12 date">2014-2016</div>
+              <div class="col-12 a">Jr. Product Designer</div>
+              <div class="col-12 uni text-danger">Dribbble</div>
+              <div class="col-12 b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+            <br />
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="col-12 date">2017-2019</div>
+              <div class="col-12 a">Product Designer</div>
+              <div class="col-12 uni text-danger">Adobe</div>
+              <div class="col-12 b">
+                Lisque persius interesset his et, in quot quidam persequeris
+                vim, ad mea essent possim iriure.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row sk d-flex justify-content-center">
+          <div class="col-sm-12 categ">My Skills</div>
+          <br />
+          <br />
+          <div class="col-6">
+            <div class="col-12 d-flex justify-content-between">
+              <p class="a">Web Design</p>
+              <p class="a">65%</p>
+            </div>
+            <div class="col-12 progress progess-sm mb-4">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="65"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 65%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-12 d-flex justify-content-between">
+              <p class="a">HTML/CSS</p>
+              <p class="a">95%</p>
+            </div>
+            <div class="col-12 progress progess-sm mb-4">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="95"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 95%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-12 d-flex justify-content-between">
+              <p class="a">JavaScript</p>
+              <p class="a">80%</p>
+            </div>
+            <div class="col-12 progress progess-sm mb-4">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="80"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 80%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-12 d-flex justify-content-between">
+              <p class="a">React JS</p>
+              <p class="a">70%</p>
+            </div>
+            <div class="col-12 progress progess-sm mb-4">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="70"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 70%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-12 d-flex justify-content-between">
+              <p class="a">Angular Js</p>
+              <p class="a">60%</p>
+            </div>
+            <div class="col-12 progress progess-sm mb-4">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 60%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-12 d-flex justify-content-between">
+              <p class="a">Bootstrap</p>
+              <p class="a">99%</p>
+            </div>
+            <div class="col-12 progress progess-sm mb-4">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="99"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 99%"
+              ></div>
+            </div>
+          </div>
+          <button type="button" class="btn btn-outline-success">
+            Download CV <i class="fa-solid fa-download"></i>
+          </button>
         </div>
       </div>
     </div>
