--- a/Simone/site.html
+++ b/Simone/site.html
@@ -451,6 +451,62 @@
         </div>
       </div>
     </div>
+    <div class="service">
+      <div class="text-center">
+        <div class="back">
+          <p>CONTACT</p>
+        </div>
+        <div class="front">
+          <p>Get In Touch</p>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-2 col-md-4 col-sm-12">
+            <div class="a">ADDRESS</div>
+            <div class="b">
+              <div class="address">
+                <p>
+                  4th Floor, Plot No.22, 145 Murphy Canyon Rd. San Diego CA 2028
+                </p>
+              </div>
+              <br />
+              <div class="contact">
+                <p>
+                  <i class="fa-solid fa-phone"></i>
+                  (060) 444 434 444
+                </p>
+                <p><i class="fa-solid fa-fax"></i> 
+                  (060) 555 545 555
+                </p>
+                <p><i class="fa-solid fa-envelope"></i>
+                   chat@simone.com
+                  </p>
+              </div>
+            </div>
+            <br />
+            <div class="a">FOLLOW ME</div>
+            <div class="follow d-flex">
+              <a href="#" class="nav-link">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#" class="nav-link">
+                <i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a href="#" class="nav-link">
+                <i class="fa-brands fa-dribbble"></i>
+              </a>
+              <a href="#" class="nav-link">
+                <i class="fa-brands fa-google"></i>
+              </a>
+              <a href="#" class="nav-link">
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
