--- a/Simone/site.html
+++ b/Simone/site.html
@@ -445,13 +445,13 @@
               ></div>
             </div>
           </div>
-          <button type="button" class="btn btn-outline-success">
-            Download CV <i class="fa-solid fa-download"></i>
+          <button type="button" class="btn btn-outline-secondary">
+            Download CV <i class="fa-solid fa-download text-secondary"></i>
           </button>
         </div>
       </div>
     </div>
-    <div class="service">
+    <div class="service contact">
       <div class="text-center">
         <div class="back">
           <p>CONTACT</p>
@@ -471,38 +471,52 @@
                 </p>
               </div>
               <br />
-              <div class="contact">
+              <div class="con">
                 <p>
                   <i class="fa-solid fa-phone"></i>
                   (060) 444 434 444
                 </p>
-                <p><i class="fa-solid fa-fax"></i> 
+                <p>
+                  <i class="fa-solid fa-fax"></i>
                   (060) 555 545 555
                 </p>
-                <p><i class="fa-solid fa-envelope"></i>
-                   chat@simone.com
-                  </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i>
+                  chat@simone.com
+                </p>
               </div>
             </div>
             <br />
             <div class="a">FOLLOW ME</div>
-            <div class="follow d-flex">
-              <a href="#" class="nav-link">
+            <div class="col-8 follow d-flex justify-content-between">
+              <a href="#" class="follow-link">
                 <i class="fa-brands fa-twitter"></i>
               </a>
-              <a href="#" class="nav-link">
+              <a href="#" class="follow-link">
                 <i class="fa-brands fa-facebook-f"></i
               ></a>
-              <a href="#" class="nav-link">
+              <a href="#" class="follow-link">
                 <i class="fa-brands fa-dribbble"></i>
               </a>
-              <a href="#" class="nav-link">
+              <a href="#" class="follow-link">
                 <i class="fa-brands fa-google"></i>
               </a>
-              <a href="#" class="nav-link">
+              <a href="#" class="follow-link">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
+          </div>
+          <div class="col-lg-8 col-md-4 col-sm-12">
+            <div class="a">SEND US A NOTE</div>
+            <input type="text" placeholder="Name" />
+            <input type="text" placeholder="Email" />
+            <input
+              type="text"
+              placeholder="Tell us more about your needs...."
+            />
+            <button type="button" class="btn btn-outline-success">
+              Send message
+            </button>
           </div>
         </div>
       </div>
