--- a/Simone/site.html
+++ b/Simone/site.html
@@ -508,11 +508,12 @@
           </div>
           <div class="col-lg-8 col-md-4 col-sm-12">
             <div class="a">SEND US A NOTE</div>
-            <input type="text" placeholder="Name" />
-            <input type="text" placeholder="Email" />
+            <input type="text" placeholder="Name" class="col-lg-5 col-sm-12" />
+            <input type="text" placeholder="Email" class="col-lg-5 col-sm-12" />
             <input
               type="text"
               placeholder="Tell us more about your needs...."
+              class="col-lg-12 col-sm-12"
             />
             <button type="button" class="btn btn-outline-success">
               Send message
