--- a/Simone/site.html
+++ b/Simone/site.html
@@ -98,7 +98,7 @@
         >
           <div class="first container text-center">
             <p class="wel">Welcome</p>
-            <h1 class="animation">Simone</h1>
+            <h1 class="animation">&nbsp;</h1>
             <p class="bas">based in Los Angeles, California.</p>
             <button type="button" class="btn btn-outline-success">
               Hire Me
