--- a/Simone/site.html
+++ b/Simone/site.html
@@ -508,19 +508,56 @@
           </div>
           <div class="col-lg-8 col-md-4 col-sm-12">
             <div class="a">SEND US A NOTE</div>
-            <input type="text" placeholder="Name" class="col-lg-5 col-sm-12" />
-            <input type="text" placeholder="Email" class="col-lg-5 col-sm-12" />
-            <input
-              type="text"
-              placeholder="Tell us more about your needs...."
-              class="col-lg-12 col-sm-12"
-            />
-            <button type="button" class="btn btn-outline-success">
-              Send message
-            </button>
+            <form
+              action=""
+              class="d-flex flex-column flex-wrap justify-content-between"
+            >
+              <div class="container-fluid">
+                <div class="row">
+                  <input
+                    type="text"
+                    placeholder="Name"
+                    class="col-lg-5 col-sm-12"
+                  />
+                  <input
+                    type="text"
+                    placeholder="Email"
+                    class="col-lg-6 col-sm-12"
+                  />
+                  <textarea
+                    type="text"
+                    placeholder="Tell us more about your needs...."
+                    class="col-lg-12 col-sm-12"
+                  ></textarea>
+                </div>
+                <br />
+                <button type="button" class="btn btn-outline-success">
+                  Send message
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
+    </div>
+    <div class="footer">
+      <footer>
+        <div class="container">
+          <div class="row d-flex align-content-center p-3">
+            <div class="col-4">
+              <p>Copyright © 2023 Simone. All Rights Reserved.</p>
+            </div>
+            <div class="col-6 d-flex justify-content-end gap-3">
+              <div class="col-2">
+                <a href="">Terms & Policy</a>
+              </div>
+              <div class="col-2">
+                <a href="">Disclaimer</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
