--- a/Simone/site.html
+++ b/Simone/site.html
@@ -349,7 +349,7 @@
           <div class="col-sm-12 categ">My Skills</div>
           <br />
           <br />
-          <div class="col-6">
+          <div class="col-lg-6 col-sm-12">
             <div class="col-12 d-flex justify-content-between">
               <p class="a">Web Design</p>
               <p class="a">65%</p>
@@ -365,7 +365,7 @@
               ></div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-sm-12">
             <div class="col-12 d-flex justify-content-between">
               <p class="a">HTML/CSS</p>
               <p class="a">95%</p>
@@ -381,7 +381,7 @@
               ></div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-sm-12">
             <div class="col-12 d-flex justify-content-between">
               <p class="a">JavaScript</p>
               <p class="a">80%</p>
@@ -397,7 +397,7 @@
               ></div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-sm-12">
             <div class="col-12 d-flex justify-content-between">
               <p class="a">React JS</p>
               <p class="a">70%</p>
@@ -413,7 +413,7 @@
               ></div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-sm-12">
             <div class="col-12 d-flex justify-content-between">
               <p class="a">Angular Js</p>
               <p class="a">60%</p>
@@ -429,7 +429,7 @@
               ></div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-sm-12">
             <div class="col-12 d-flex justify-content-between">
               <p class="a">Bootstrap</p>
               <p class="a">99%</p>
