--- a/Simone/site.html
+++ b/Simone/site.html
@@ -451,6 +451,126 @@
         </div>
       </div>
     </div>
+    <div class="about portfolio">
+      <div class="text-center">
+        <div class="back">
+          <p>PORTFOLIO</p>
+        </div>
+        <div class="front">
+          <p>My Work</p>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img smallrec">
+              <img src="img/x03.jpg" alt="Small Rectangle Image" />
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img largerec">
+              <img src="img/x04.jpg" alt="Large Rectangle Image" />
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img smallrec">
+              <img src="img/x05.jpg" alt="Small Rectangle Image" />
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img largerec">
+              <img src="img/x06.jpg" alt="Large Rectangle Image" />
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img smallrec">
+              <img src="img/x07.jpg" alt="Small Rectangle Image" />
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img largerec">
+              <img src="img/x08.jpg" alt="Large Rectangle Image" />
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="portfolio-img largerec">
+              <img src="img/x09.jpg" alt="Large Rectangle Image" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="about portfolio">
+      <div class="text-center">
+        <div class="back">
+          <p>TESTIMONIAL</p>
+        </div>
+        <div class="front">
+          <p>Client Speak</p>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row d-flex justify-content-around">
+          <div class="col-md-6 col-sm-12">
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="row">
+                <div class="col-2 profile">
+                  <img src="img/x13.jpg" alt="" />
+                </div>
+                <div class="col-9">
+                  <div class="col-12 name">Dennis Jacques</div>
+                  <div class="col-12 nationality">User from USA</div>
+                </div>
+              </div>
+              <div class="p-4 pb-2">
+                <div class="col-12 pb-3 b">
+                  "Only trying it out since a few days. But up to now excellent.
+                  Seems to work flawlessly. priced simply dummy text of the
+                  printing and typesetting industry."
+                </div>
+                <div class="col-12">
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="sq col-sm-11 d-flex flex-column flex-wrap">
+              <div class="row">
+                <div class="col-2 profile">
+                  <img src="img/x14.jpg" alt="" />
+                </div>
+                <div class="col-9">
+                  <div class="col-12 name">Jay Shah</div>
+                  <div class="col-12 nationality">
+                    Founder at Icomatic Pvt Ltd
+                  </div>
+                </div>
+              </div>
+              <div class="p-4 pb-2">
+                <div class="col-12 pb-3 b">
+                  "Easy to use, reasonably priced simply dummy text of the
+                  printing and typesetting industry. Quidam lisque persius
+                  interesset his et, in quot quidam possim iriure."
+                </div>
+                <div class="col-12">
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="service contact">
       <div class="text-center">
         <div class="back">
@@ -488,7 +608,9 @@
             </div>
             <br />
             <div class="a">FOLLOW ME</div>
-            <div class="col-8 follow d-flex justify-content-between">
+            <div
+              class="col-lg-8 col-sm-3 follow d-flex justify-content-between"
+            >
               <a href="#" class="follow-link">
                 <i class="fa-brands fa-twitter"></i>
               </a>
@@ -560,5 +682,7 @@
       </footer>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
   </body>
 </html>
