--- a/Simone/site.html
+++ b/Simone/site.html
@@ -734,23 +734,25 @@
     </div>
     <div class="footer">
       <footer>
-        <div class="container">
-          <div class="row d-flex align-content-center p-3">
-            <div class="col-4">
-              <p>Copyright © 2023 Simone. All Rights Reserved.</p>
+        <div class="container ">
+          <div class="row">
+            <div class="col-6">
+              <p>Copyright © 2023 <span>Simone.</span> All Rights Reserved.</p>
             </div>
-            <div class="col-6 d-flex justify-content-end gap-3">
-              <div class="col-2">
-                <a href="">Terms & Policy</a>
+            <div class="col-6 d-flex justify-content-end gap-2">
+              <div>
+                <a href="#">Terms & Policy</a>
               </div>
-              <div class="col-2">
-                <a href="">Disclaimer</a>
+              <p>|</p>
+              <div>
+                <a href="#">Disclaimer</a>
               </div>
             </div>
           </div>
         </div>
       </footer>
     </div>
+
     <script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
