--- a/Simone/site.html
+++ b/Simone/site.html
@@ -103,11 +103,21 @@
             <button type="button" class="btn btn-outline-success">
               Hire Me
             </button>
+            <div class="animated-box">
+              <a
+                href="#about"
+                class="scroll-down-arrow text-white smooth-scroll d-block"
+              >
+                <span class="">
+                  <i class="fa fa-chevron-down"></i>
+                </span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="about">
+    <div class="about" id="about">
       <div class="text-center">
         <div class="back">
           <p>ABOUT ME</p>
@@ -734,7 +744,7 @@
     </div>
     <div class="footer">
       <footer>
-        <div class="container ">
+        <div class="container">
           <div class="row">
             <div class="col-6">
               <p>Copyright © 2023 <span>Simone.</span> All Rights Reserved.</p>
