--- a/Form Data/site.html
+++ b/Form Data/site.html
@@ -22,7 +22,7 @@
           <input class="form-control mb-3" type="text" id="BookCat" />
           <label for="BookDesc">Book Description: </label>
           <input class="form-control mb-3" type="text" id="BookDesc" />
-          <button class="btn btn-light">Add book</button>
+          <button class="btn btn-light" onclick="getBook();">Add book</button>
         </div>
         <div class="tableData py-5">
           <table class="table table-striped text-center">
@@ -34,7 +34,7 @@
               <th>Book Description</th>
               <th>Actions</th>
             </thead>
-            <tbody>
+            <tbody id="tableBody">
               <tr>
                 <td>0</td>
                 <td>hii</td>
@@ -51,5 +51,7 @@
         </div>
       </div>
     </div>
+    <script src="js/script.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
