--- a/Form Data/site.html
+++ b/Form Data/site.html
@@ -17,7 +17,7 @@
           <label for="BookNa">Book Name: </label>
           <input class="form-control mb-3" type="text" id="BookNa" />
           <label for="BookPr">Book Price: </label>
-          <input class="form-control mb-3" type="text" id="BookPr" />
+          <input class="form-control mb-3" type="number" id="BookPr" />
           <label for="BookCat">Book Category: </label>
           <input class="form-control mb-3" type="text" id="BookCat" />
           <label for="BookDesc">Book Description: </label>
