delete book & local storage

--- a/Form Data/site.html
+++ b/Form Data/site.html
@@ -22,7 +22,7 @@
           <input class="form-control mb-3" type="text" id="BookCat" />
           <label for="BookDesc">Book Description: </label>
           <input class="form-control mb-3" type="text" id="BookDesc" />
-          <button class="btn btn-light" onclick="getBook();">Add book</button>
+          <button class="btn btn-light" onclick="addBook();">Add book</button>
         </div>
         <div class="tableData py-5">
           <table class="table table-striped text-center">
