--- a/Form Data/site.html
+++ b/Form Data/site.html
@@ -22,7 +22,9 @@
           <input class="form-control mb-3" type="text" id="BookCat" />
           <label for="BookDesc">Book Description: </label>
           <input class="form-control mb-3" type="text" id="BookDesc" />
-          <button class="btn btn-light" onclick="addBook();">Add book</button>
+          <button class="btn btn-light" id="AddandUpdateBtn" onclick="action();">Add book</button>
+                    <button class="btn btn-light" onclick="clearInputs();">Reset</button>
+
         </div>
         <div class="tableData py-5">
           <table class="table table-striped text-center">
