--- a/Form Data/site.html
+++ b/Form Data/site.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,41 +8,60 @@
     <link rel="stylesheet" href="CSS/bootstrap.min.css" />
     <link rel="stylesheet" href="CSS/all.min.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="formContainer py-5">
-        <div class="container">
-            <h1 class="text-center py-4">Book Data</h1>
-            <div class="content">
-                <label for="BookNa">Book Name: </label>
-                <input class="form-control mb-3" type="text" id="BookNa" />
-                <label for="BookPr">Book Price: </label>
-                <input class="form-control mb-3" type="number" id="BookPr" />
-                <label for="BookCat">Book Category: </label>
-                <input class="form-control mb-3" type="text" id="BookCat" />
-                <label for="BookDesc">Book Description: </label>
-                <input class="form-control mb-3" type="text" id="BookDesc" />
-                <button class="btn btn-light" id="AddandUpdateBtn" onclick="action();">Add book</button>
-                <button class="btn btn-light" onclick="clearInputs();">Reset</button>
-            </div>
-            <div class="tableData py-5">
-                <table class="table table-striped text-center">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Book Name</th>
-                            <th>Book Price</th>
-                            <th>Book Category</th>
-                            <th>Book Description</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tableBody"></tbody>
-                </table>
-            </div>
+      <div class="container">
+        <h1 class="text-center py-4">Book Data</h1>
+        <div class="content">
+          <label for="BookNa">Book Name: </label>
+          <input class="form-control mb-3" type="text" id="BookNa" />
+          <label for="BookPr">Book Price: </label>
+          <input class="form-control mb-3" type="number" id="BookPr" />
+          <label for="BookCat">Book Category: </label>
+          <input class="form-control mb-3" type="text" id="BookCat" />
+          <label for="BookDesc">Book Description: </label>
+          <input class="form-control mb-3" type="text" id="BookDesc" />
+          <div class="d-flex justify-content-center gap-4 mt-5">
+            <button
+              class="btn btn-light"
+              id="AddandUpdateBtn"
+              onclick="action();"
+            >
+              Add book
+            </button>
+            <button class="btn btn-light" onclick="clearInputs();">
+              Reset
+            </button>
+          </div>
         </div>
+        <div class="search my-5 w-75 mx-auto">
+          <input
+            class="form-control"
+            type="text"
+            id="search"
+            placeholder="Search"
+            oninput="search(this.value);"
+          />
+        </div>
+        <div class="tableData py-5">
+          <table class="table table-striped text-center">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Book Name</th>
+                <th>Book Price</th>
+                <th>Book Category</th>
+                <th>Book Description</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="tableBody"></tbody>
+          </table>
+        </div>
+      </div>
     </div>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
