--- a/Resturant/site.html
+++ b/Resturant/site.html
@@ -11,28 +11,28 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
       <div class="row">
         <nav>
-          <p class="logo">
+          <p class="logo col-3">
             <i style="color: var(--mainColor)" class="fa-solid fa-utensils"></i>
             Resto.
           </p>
-          <ul class="nav">
+          <ul class="nav col-6 d-flex justify-content-center align-content-center">
             <li class="nav-item"><a href="#" id="home">Home</a></li>
             <li class="nav-item"><a href="#">Dishes</a></li>
             <li class="nav-item"><a href="#">About</a></li>
             <li class="nav-item"><a href="#">Review</a></li>
             <li class="nav-item"><a href="#">Order</a></li>
           </ul>
-          <ul class="icons">
-            <li class="circle">
+          <ul class="icons col-3">
+            <li class="circle col-4">
               <i class="fas fa-search"></i>
             </li>
-            <li class="circle">
+            <li class="circle col-4">
               <i class="fas fa-heart"></i>
             </li>
-            <li class="circle">
+            <li class="circle col-4">
               <i class="fas fa-shopping-cart"></i>
             </li>
           </ul>
@@ -55,10 +55,8 @@
         <div class="second">
           <p class="title">Our Dishes</p>
           <p class="title" style="color: black">POPULAR DISHES</p>
-          <div class="menu">
-            <div class="cards">
-              <!-- <li class="circle1">a</li>
-              <li class="circle2">b</li> -->
+          <div class="menu row">
+            <div class="cards col-lg-3">
               <img src="img/x03.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
@@ -77,7 +75,7 @@
                 <button class="add">Add to cart</button>
               </div>
             </div>
-            <div class="cards">
+            <div class="cards col-lg-3">
               <img src="img/x04.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
@@ -96,7 +94,7 @@
                 <button class="add">Add to cart</button>
               </div>
             </div>
-            <div class="cards">
+            <div class="cards col-lg-3">
               <img src="img/x05.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
@@ -115,7 +113,7 @@
                 <button class="add">Add to cart</button>
               </div>
             </div>
-            <div class="cards">
+            <div class="cards col-lg-3">
               <img src="img/x06.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
@@ -134,7 +132,7 @@
                 <button class="add">Add to cart</button>
               </div>
             </div>
-            <div class="cards">
+            <div class="cards col-lg-3">
               <img src="img/x07.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
@@ -516,6 +514,6 @@
         src="https://kit.fontawesome.com/yourcode.js"
         crossorigin="anonymous"
       ></script>
-    </div>
+    <!-- </div> -->
   </body>
 </html>
